@@ -1,3 +1,9 @@
+2015-01-18  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/atomic_futex.h: Use mutex and condition_variable when
+	atomic int is not lock-free. Make member variables private.
+	* src/c++11/futex.cc: Likewise.
+
 2015-01-17  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/64638
